--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<h1>Emerald<br/><hr>Foundation</h1>
+						<p>Welcome to the "E"</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,14 +28,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Emerald Foundation</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<li class="active"><a href="index.html">EStories</a></li>
+							<li><a href="generic.html">About The E</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -54,16 +52,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">December 6, 2016</span>
+									<h2><a href="http://lancasteronline.com/business/local_business/emerald-foundation-buys-vacant-jcc-building-starts-events-and-programs/article_60a56ce0-b8bb-11e6-bfd5-a7201e16d4f8.html">Emerald Foundation buys vacant JCC building</a></h2>
+									<p>Joe Besecker doesn’t need more to do. He’s already up to his elbows in work.<br/>As the founder of Leola-based Emerald Asset Management, he oversees 68 employees and $4.7 billion in assets under management.<br/>Still, Besecker wants to see greater impact from the company’s charitable arm, the Emerald Foundation, which he also started and leads.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="http://lancasteronline.com/business/local_business/emerald-foundation-buys-vacant-jcc-building-starts-events-and-programs/article_60a56ce0-b8bb-11e6-bfd5-a7201e16d4f8.html" class="image main"><img src="images/dad.jpg" alt="" /></a>
 								<ul class="actions">
-									<li><a href="#" class="button big">Full Story</a></li>
+									<li><a href="http://lancasteronline.com/business/local_business/emerald-foundation-buys-vacant-jcc-building-starts-events-and-programs/article_60a56ce0-b8bb-11e6-bfd5-a7201e16d4f8.html" class="button big">Full Story</a></li>
 								</ul>
 							</article>
 
@@ -71,33 +66,31 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">March 01, 2017 </span>
+										<h2><a href="https://www.townlively.com/fighting-back-against-parkinsons/">Fighting Back<br />
+										Against Parkinson's</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://www.townlively.com/fighting-back-against-parkinsons/" class="image fit"><img src="images/rocksteady.jpg" alt="" /></a>
+									<p><strong>Rock Steady Boxing Becomes Available In Lancaster</strong><br/>Bill Dorsey was first diagnosed with Parkinson's disease over two years ago. For the last several months, he has been taking part in a Rock Steady Boxing class offered by Susan Ludwig.<br/> Soon, that same class will be offered to other Parkinson's patients at the Emerald Foundation Community Center, 2120 Oregon Pike</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://www.townlively.com/fighting-back-against-parkinsons/" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#http://lancasteronline.com/insider/nhs-plans-to-open-school-for-students-with-autism-in/article_36063b14-252f-11e7-9f20-5bb1b8bd8d31.html">NHS plans to open school for students with autism in Lancaster County</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="http://lancasteronline.com/insider/nhs-plans-to-open-school-for-students-with-autism-in/article_36063b14-252f-11e7-9f20-5bb1b8bd8d31.html" class="image fit"><img src="images/foundationbuilding.jpg" alt="" /></a>
+									<p>A nonprofit that runs schools for students who have autism or need emotional support is planning one in Lancaster County for up to 60 students from kindergarten through age 21.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="http://lancasteronline.com/insider/nhs-plans-to-open-school-for-students-with-autism-in/article_36063b14-252f-11e7-9f20-5bb1b8bd8d31.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">April 20, 2017</span>
+										<h2><a href="#">Filler</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
