--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<h2><a href="http://lancasteronline.com/business/local_business/emerald-foundation-buys-vacant-jcc-building-starts-events-and-programs/article_60a56ce0-b8bb-11e6-bfd5-a7201e16d4f8.html">Emerald Foundation buys vacant JCC building</a></h2>
 									<p>Joe Besecker doesn’t need more to do. He’s already up to his elbows in work.<br/>As the founder of Leola-based Emerald Asset Management, he oversees 68 employees and $4.7 billion in assets under management.<br/>Still, Besecker wants to see greater impact from the company’s charitable arm, the Emerald Foundation, which he also started and leads.</p>
 								</header>
-								<a href="http://lancasteronline.com/business/local_business/emerald-foundation-buys-vacant-jcc-building-starts-events-and-programs/article_60a56ce0-b8bb-11e6-bfd5-a7201e16d4f8.html" class="image main"><img src="images/dad.jpg" alt="" /></a>
+								<a href="http://lancasteronline.com/business/local_business/emerald-foundation-buys-vacant-jcc-building-starts-events-and-programs/article_60a56ce0-b8bb-11e6-bfd5-a7201e16d4f8.html" class="image main"><img src="../images/dad.jpg" alt="" /></a>
 								<ul class="actions">
 									<li><a href="http://lancasteronline.com/business/local_business/emerald-foundation-buys-vacant-jcc-building-starts-events-and-programs/article_60a56ce0-b8bb-11e6-bfd5-a7201e16d4f8.html" class="button big">Full Story</a></li>
 								</ul>
