--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">EStories</a></li>
 							<li><a href="generic.html">About The E</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="nonprofits.html">Non-Profits @ The E</a></li>
+							<li><a href="https://www.facebook.com/pg/emeraldfoundationpa/events/?ref=page_internal">Upcoming Events</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
+							<li><a href="https://www.facebook.com/emeraldfoundationpa/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<!--<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<li><a href="https://emeralde.org/contact-us/" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</nav>
 
