--- a/elements.html
+++ b/elements.html
@@ -25,15 +25,16 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li class="active"><a href="elements.html">Elements Reference</a></li>
+							<li><a href="index.html">EStories</a></li>
+							<li><a href="generic.html">About The E</a></li>
+							<li class="active"><a href="elements.html">Non Profits @ The E</a></li>
+							<li><a href="https://www.facebook.com/pg/emeraldfoundationpa/events/?ref=page_internal">Upcoming Events</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+								<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
+							<li><a href="https://www.facebook.com/emeraldfoundationpa/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<!--<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<li><a href="https://emeralde.org/contact-us/" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</nav>
 
