More Emerald Changes

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 							<li><a href="generic.html">About The E</a></li>
 							<li><a href="nonprofits.html">Non-Profits @ The E</a></li>
 							<li><a href="https://www.facebook.com/pg/emeraldfoundationpa/events/?ref=page_internal">Upcoming Events</a></li>
+							<li><a href="http://esportsatthee.com/">ESports @ The E</a></li>
+							
+							<li><a href="https://emeralde.org/donate-now/">Donate Now</a>
 						</ul>
 						<ul class="icons">
 							<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
@@ -64,7 +67,7 @@
 							</article>
 
 						<!-- Posts -->
-							<section class="posts">
+							<section class="posts" id="one">
 								<article>
 									<header>
 										<span class="date">March 01, 2017 </span>
@@ -141,7 +144,7 @@
 							<footer>
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
+									<a href="#one" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
@@ -158,44 +161,31 @@
 					<footer id="footer">
 						<section>
 							<form method="post" action="#">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input type="text" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="3"></textarea>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
+								<div class="image main"><img src="images/EmeraldFoundationBackground.jpg" alt="" /></div>
 							</form>
-						</section>
+						</section> 
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>2120 Oregon Pike<br />
+								Lancaster, PA  17601</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p>(717)-560-7572</p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="mailto:LCubell@emeraldfoundationpa.org?Subject= Contact%20Us" >LCubell@emeraldfoundationpa.org </a><br/>
+								<a href="mailto:MCarrasco@emeraldfoundationpa.org?Subject= Contact%20Us" >MCarrasco@emeraldfoundationpa.org</p></a>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+							<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
+							<li><a href="https://www.facebook.com/emeraldfoundationpa/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<!--<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+							<li><a href="https://emeralde.org/contact-us/" class="icon fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -203,7 +193,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Emerald Foundation</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
