--- a/nonprofits.html
+++ b/nonprofits.html
@@ -59,9 +59,10 @@
 								</header>
 								<div><a href="http://capbigs.org/" class="image fit"><img src="images/BBBS.jpg" alt="" /></div>
 								<p>Our mission is to provide children facing adversity with strong and enduring, professionally supported one-to-one relationships that change their lives for the better, forever.</p></a>
-								<div><a href="http://kpets.org/" class="image fit"><img src="images/KPets.jpg" alt="" /></div>
+								<div><a href="http://kpets.org/" class="image fit"><img src="images/KPets.jpg" alt="" /></div></a>
 								<p>KPETS is a network of registered volunteer teams who partner with their companion animal(s) to provide comfort, encouragement and rehabilitation through human/animal interactions. Serving local communities in health-related facilities, social agencies, special-needs programs, schools, libraries, retirement communities and hospices, KPETS teams readily visit wherever the human/animal connection may be beneficial.  KPETS services are free of charge.  Established in 2003, KPETS has grown into an organization with more than 375 volunteer teams, providing over 10,000 visits of animal assisted therapy to over 300 facilities every year..</p>
 							</section>
+
 
 					</div>
 
