--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">EStories</a></li>
 							<li><a href="generic.html">About The E</a></li>
-							<li><a href="nonprofits.html">Non-Profits @ The E</a></li>
+							<li><a href="nonprofits.html">Non-Profits</a></li>
 							<li><a href="https://www.facebook.com/pg/emeraldfoundationpa/events/?ref=page_internal">Upcoming Events</a></li>
-							<li><a href="http://esportsatthee.com/">ESports @ The E</a></li>
-							
+							<li><a href="http://esportsatthee.com/">ESports</a></li>
+							<li><a href="pictures.html">Album</a>
 							<li><a href="https://emeralde.org/donate-now/">Donate Now</a>
+							
 						</ul>
 						<ul class="icons">
 							<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
