--- a/pictures.html
+++ b/pictures.html
@@ -33,10 +33,10 @@
 						<ul class="links">
 							<li><a href="index.html">EStories</a></li>
 							<li><a href="generic.html">About The E</a></li>
-							<li><a href="nonprofts.html">Non-Profits</a></li>
+							<li><a href="nonprofits.html">Non-Profits</a></li>
 							<li><a href="https://www.facebook.com/pg/emeraldfoundationpa/events/?ref=page_internal">Upcoming Events</a></li>
 							<li><a href="http://esportsatthee.com/">ESports</a></li>
-							<li class="active"><a href="pictures.html">Album</a>
+							<li class="active"><a href="pictures.html">Album</a></li>
 							<li><a href="https://emeralde.org/donate-now/">Donate Now</a>
 						</ul>
 						<ul class="icons">
