--- a/generic.html
+++ b/generic.html
@@ -76,8 +76,11 @@
 							<section class="alt">
 								<h3>Address</h3>
 								<p>2120 Oregon Pike<br />
-								Lancaster, PA  17601</p>
+								Lancaster, PA  17601</p>	
 							</section>
+							<section>
+							<h3>Building Hours</h3>
+								<p>Monday-Friday 9:00am – 5:00pm<br/>Weekends: by appointment</p></section>
 							<section>
 								<h3>Phone</h3>
 								<p>(717)-560-7572</p>
