--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Emerald<br/><hr>Foundation</h1>
+						<span class="image left"><img src="images/logo.png" alt="" /></span>
 						<p>Welcome to the "E"</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
@@ -34,7 +34,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Emerald<br/><hr>Foundation</a>
+						<a href="index.html" class="logo"><span class="image "><img src="images/logosmall.png" alt="" /></span></a>
 					</header>
 
 				<!-- Nav -->
@@ -44,6 +44,7 @@
 							<li><a href="generic.html">About The E</a></li>
 							<li><a href="nonprofits.html">Non-Profits</a></li>
 							<li><a href="https://www.facebook.com/pg/emeraldfoundationpa/events/?ref=page_internal">Upcoming Events</a></li>
+							<li><a href="rental.html">Rental Space</a></li>
 							<li><a href="http://esportsatthee.com/">ESports</a></li>
 							<li><a href="pictures.html">Album</a>
 							<li><a href="https://emeralde.org/donate-now/">Donate Now</a>
@@ -169,7 +170,6 @@
 						<section>
 							<form method="post" action="#">
 								<div class="image main"><img src="images/EmeraldFoundationBackground.jpg" alt="" /></div>
-								
 							</form>
 						</section> 
 						<section class="split contact">
