--- a/nonprofitsincubator.html
+++ b/nonprofitsincubator.html
@@ -58,18 +58,29 @@
 									<span class="date">Non-Profits @ The E</span>
 									<h2>Incubator for <br/>non-profits</h2>
 									<p>Emerald Foundation “E” Rental Subsidy Program:</p>
-								
-									<ul class="actions">
-										<li><a href="nonprofitsincubator.html" class="button special big">CLICK HERE TO LEARN MORE</a></li></ul>
-										</header>
-										<br/>
-										<hr>
-										<header class="major">
-									<h2>The Emerald Foundation “E” Partnership Program:</h2>
-									<p>We are also hosting weekly and as needed partnered non-profit programming at greatly reduced or free space. Current programming includes:</p>
-								<ul class="actions">
-								<li><a href="nonprofitspartnership.html" class="button special big">CLICK HERE TO LEARN MORE</li></a></ul>
+								</header>
+								<hr>
+								<br/>
+								<p><span class="image left"><a href="http://www.nhsonline.org/" ><img src="images/nhs.png" alt="" /></span>
+								With a rich tradition spanning almost 50 years, NHS is at the forefront of providing care and services to people with special needs. Today NHS, through its subsidiaries, is a leading provider of community-based, non-profit education and human services. More than 10,000 employees provide care to almost 40,000 adults and children throughout Pennsylvania, New Jersey, Virginia, New York, Maryland, Delaware, Louisiana, and Michigan...</p></a>
+								<hr>
+								<br/>
 
+								<p><span class="image left"><a href="http://capbigs.org/"><img src="images/BBBS.jpg" alt="" /></span>
+								Our mission is to provide children facing adversity with strong and enduring, professionally supported one-to-one relationships that change their lives for the better, forever...</p></a>
+								<hr>
+								<br/>
+
+								<p><span class="image left"><a href="http://kpets.org/"><img src="images/KPets.jpg" alt="" /></span>
+								KPETS is a network of registered volunteer teams who partner with their companion animal(s) to provide comfort, encouragement and rehabilitation through human/animal interactions. Serving local communities in health-related facilities, social agencies, special-needs programs, schools, libraries, retirement communities and hospices, KPETS teams readily visit wherever the human/animal connection may be beneficial.  KPETS services are free of charge.  Established in 2003, KPETS has grown into an organization with more than 375 volunteer teams, providing over 10,000 visits of animal assisted therapy to over 300 facilities every year...</p></a>
+								<hr>
+								<br/>
+
+								<p><span class="image left"><a href="https://www.facebook.com/RSBatTheEmerald/" ><img src="images/rocksteady.png" alt="" /></span>
+								Rock Steady Boxing, a 501 (c)(3) nonprofit organization, gives people with Parkinson’s disease hope by improving their quality of life through a non-contact boxing based fitness curriculum...</p></a>
+								<br/>
+								<hr>
+								<br/>
 
 							</section>
 
