--- a/pictures.html
+++ b/pictures.html
@@ -25,8 +25,9 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Emerald<br/><hr>Foundation</a>
+						<a href="index.html" class="logo"><span class="image "><img src="images/logosmall.png" alt="" /></span></a>
 					</header>
+
 
 				<!-- Nav -->
 					<nav id="nav">
@@ -35,6 +36,7 @@
 							<li><a href="generic.html">About The E</a></li>
 							<li><a href="nonprofits.html">Non-Profits</a></li>
 							<li><a href="https://www.facebook.com/pg/emeraldfoundationpa/events/?ref=page_internal">Upcoming Events</a></li>
+							<li><a href="rental.html">Rental Space</a></li>
 							<li><a href="http://esportsatthee.com/">ESports</a></li>
 							<li class="active"><a href="pictures.html">Album</a></li>
 							<li><a href="https://emeralde.org/donate-now/">Donate Now</a>
