--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<span class="image left"><img src="images/logo.png" alt="" /></span>
+						<span class="image"><img src="images/logo.png" alt="" /></span>
 						<p>Welcome to the "E"</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
