--- a/generic.html
+++ b/generic.html
@@ -25,7 +25,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><span class="image "><img src="images/logosmall.png" alt="" /></span></a>
+						<a href="index.html" class="logo">Emerald<br/><hr>Foundation</a>
 					</header>
 
 				<!-- Nav -->
