--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Emerald<br/><hr>Foundation</h1>
+						<span class="image fit"><img src="images/logo.png" alt="" /></span>
 						<p>Welcome to the "E"</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
@@ -34,7 +34,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Emerald<br/><hr>Foundation</a>
+						<a href="index.html" class="logo"><span class="image fit"><img src="images/logosmall.png" alt="" /></span></a>
 					</header>
 
 				<!-- Nav -->
