--- a/generic.html
+++ b/generic.html
@@ -25,9 +25,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Emerald<br/><hr>Foundation</a>
+						<a href="index.html" class="logo"><span class="image fit"><img src="images/logosmall.png" alt="" /></span></a>
 					</header>
-
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
