--- a/nonprofitspartnership.html
+++ b/nonprofitspartnership.html
@@ -25,7 +25,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Emerald<br/><hr>Foundation</a>
+						<a href="index.html" class="logo"><span class="image fit"><img src="images/logosmall.png" alt="" /></span></a>
 					</header>
 
 				<!-- Nav -->
