--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 										<span class="date">April 20, 2017</span>
 										<h2><a href="#">Jebbie</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/main.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Full Story</a></li>
