--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 										<h2><a href="#">Jebbie</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/main.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Milzy is learning to code!</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
