--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 										<span class="date">April 20, 2017</span>
 										<h2><a href="#">Jebbie</a></h2>
 									</header>
-									<a href="http://www.kbford.com/used-inventory/index.htm?search=&saveFacetState=true&normalBodyStyle=&driveLine=&odometer=&internetPrice=1-10000&gclid=CjwKEAjwxo3OBRDp3Pvxhd7s_D8SJABLtfrZjMC0IQy0eXndE6fAsJo0IE_ElVEf4hZ5IjZs34vO0hoCSyjw_wcB&_pcids=2aeb0d49142e4b1dacf5c976c4c3e770%2C31418cd5eef74df49b87960a7b5cc80a%2Cd1a566acc7a5c623775883c4d659ddbe&_pcsourceid=329420e27cd0e77ef9e8d228f5c18fce&_vsrefdom=NEW&lastFacetInteracted=inventory-listing1-facet-anchor-internetPrice-0" class="image fit"><img src="images/main.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/main.jpg" alt="" /></a>
 									<p>Milzy is learning to code!</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Full Story</a></li>
