--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<article>
 									<header>
 										<span class="date">April 20, 2017</span>
-										<h2><a href="#">Jebbie</a></h2>
+										<h2><a href="#">Jeb</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/main.jpg" alt="" /></a>
 									<p>Milzy is learning to code!</p>
