--- a/rental.html
+++ b/rental.html
@@ -34,7 +34,7 @@
 						<ul class="links">
 							<li><a href="index.html">EStories</a></li>
 							<li><a href="generic.html">About The E</a></li>
-							<li><a href="nonprofts.html">Non-Profits</a></li>
+							<li><a href="nonprofits.html">Non-Profits</a></li>
 							<li><a href="https://www.facebook.com/pg/emeraldfoundationpa/events/?ref=page_internal">Upcoming Events</a></li>
 							<li class="active"><a href="rental.html">Rental Space</a></li>
 							<li><a href="http://esportsatthee.com/">ESports</a></li>
