--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Filler<br />
-										nulla imperdiet</a></h2>
+										<span class="date">October 17, 2017</span>
+										<h2><a href="http://esportsatthee.com/">Sign Up For ESports<br />
+										@ The E!</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="http://esportsatthee.com/" class="image fit"><img src="images/esports.jpg" alt="" /></a>
+									<p>Join us at the E on **/**/** and help raise money by playing video games! All money and donations go towards the Emerald Community Campus and the programs they help support! Prizes will be awarded to winners of tournaments!</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="http://esportsatthee.com/" class="button">Sign Up Here!</a></li>
 									</ul>
 								</article>
 								<article>
